--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MEu Portifólio</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Meu Portifólio</title>
 </head>
+
 <body>
-    
+    <img src="img/a98ea2df4f7b79a2783d175814461cb8.jpg" alt="Avatar da Maria Clara" srcset="">
+    <p>Olá, me chamo Maria Clara</p>
+<h1>Estudo no Colégio 14 de Dezembro, na área de exatas</h1>
+<p>Sou estudante, tenho vontade de ser biomedica e advogada, tenho um sonho de viajar o mundo, ter uma boa condição financeira, casar e ter filhos.</p>
 </body>
 </html>
