--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 
 <body>
     <header class="container text-center">
-        <img src="img/543baf727109b397c5bc361b42cf909e.jpg" class="rounded-circle" width="150" height="150"alt="Avatar da Duda" srcset="">
-        <p class="lead">Olá, me chamo Duda!</p>
-        <h1>Estudo no Colégio 14 de Dezembro</h1>
-        <p>Curso o 2° ano do Ensino Médio Integral, na área de Exatas. Futuramente quero ser médica veterinaria.</p>
+        <img src="img/a98ea2df4f7b79a2783d175814461cb8.jpg" class="rounded-circle" width="150" height="150"alt="Avatar da Maria Clara" srcset="">
+        <p class="lead">Olá, me chamo Maria Clara!</p>
+        <h1>Estudo no Colégio 14 de Dezembro, na área de exatas</h1>
+        <p>Curso o 2° ano do Ensino Médio Integral, na área de Exatas. Futuramente quero ser advogada e biomedica, quero casar e ter filhos.</p>
         <p>Minhas habilidades</p>
         <div>
             <p class="badge text-bg-secondary">Dançar</p>
-            <p class="badge text-bg-secondary">Pintar unha</p>
-            <p class="badge text-bg-secondary">Comunicação</p>
+            <p class="badge text-bg-secondary">Maquiagem</p>
+            <p class="badge text-bg-secondary">Estar bem vestida</p>
         </div>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
