--- a/index.html
+++ b/index.html
@@ -37,14 +37,17 @@
             <!-- Projeto 1 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="img/ChatGPT Image 23 de abr. de 2025, 13_53_25.png" class="card-img-top"
+                    <img src="img/a98ea2df4f7b79a2783d175814461cb8.jpg" class="card-img-top"
                         alt="Imagem do projeto SOS Matemática">
                     <div class="card-body">
                         <h5 class="card-title">Projeto S.O.S Matemática</h5>
-                        <p class="card-text" style="text-align: justify;">Projeto desenvolvido com a turma da 1ª série
-                            do Ensino Médio do Colégio
-                            Estadual 14 de Dezembro. A proposta era trabalhar matemática básica de forma mais divertida
-                            e lúdica, por meio de gamificação e jogos educativos.</p>
+                        <p class="card-text" style="text-align: justify;">O projeto S.O.S Matemática foi desenvolvido com os alunos do 1º ano do Ensino Médio,
+ com o objetivo de fortalecer os conhecimentos em matemática básica de forma lúdica e colaborativa. A proposta central do projeto consistia em permitir que os 
+ próprios estudantes escolhessem, em conjunto, os jogos matemáticos que seriam utilizados ao longo das aulas. Com a minha orientação, a turma participava
+ativamente da confecção ou adaptação desses jogos, alinhando-os aos conteúdos trabalhados em sala de aula. Para isso, eram utilizados materiais recicláveis
+ como embalagens, garrafas PET e papelão, além de materiais escolares básicos como lápis, régua, cola e tesoura, incentivando a criatividade,
+                            .
+                        </p>
                         <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal1">Veja
                             o
                             projeto</button>
@@ -75,7 +78,7 @@ no futuro.
                         alt="Projeto JEEP">
                     <div class="card-body">
                         <h5 class="card-title">Projeto Robótica</h5>
-                        <p class="card-text" style="text-align: justify;">Foi um projeto que desenvolvemos no quinto ano do semente
+                        <p class="card-text" style="text-align: justify;">Foi um projeto que desenvolvemos no quinto ano do Ensino Fundamental
 onde ele nos ensinou a ter uma abilidade de fala, venda, e visão de futro.</p>
                         <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal3">Veja
                             o
@@ -140,7 +143,8 @@ onde ele nos ensinou a ter uma abilidade de fala, venda, e visão de futro.</p>
                         Física. Por meio de aulas experimentais, os estudantes são incentivados a explorar o
                         conhecimento científico de maneira ativa, investigativa e colaborativa. As atividades do clube
                         envolvem a realização de experimentos, montagem de maquetes, análise de fenômenos naturais e
-                        resolução de problemas do cotidiano com base nos princípios das ciências da natureza.</p>
+                        resolução de problemas do cotidiano, e um desses problemas, é a futura falta de água em nosso planeta, e é onde estamo em proceso 
+                    criação, mas será um processo que ajudará muito as pessoas do mundo todo</del>.</p>
                     <p class="text-justify">Ao participar do projeto, os alunos desenvolvem habilidades como o
                         pensamento crítico, a
                         curiosidade científica e a capacidade de trabalhar em grupo, além de ampliarem sua compreensão
@@ -163,24 +167,20 @@ onde ele nos ensinou a ter uma abilidade de fala, venda, e visão de futro.</p>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <p class="text-justify">O Projeto Robótica na Escola tem como objetivo introduzir os alunos do
-                        Ensino Médio ao universo
-                        da robótica, promovendo o desenvolvimento de competências nas áreas de tecnologia, programação,
-                        matemática e resolução de problemas. Por meio de aulas práticas e interativas, os estudantes têm
-                        a oportunidade de montar e programar robôs utilizando kits educativos, sensores e plataformas de
-                        programação em blocos ou linguagens mais avançadas, conforme o nível da turma. O projeto visa
-                        aproximar os alunos das inovações tecnológicas e estimular o pensamento lógico, criativo e
-                        analítico.</p>
-                    <p class="text-justify">Além de construir e programar robôs, os alunos participam de desafios e
-                        missões que envolvem
-                        situações reais, incentivando o trabalho em equipe, a comunicação e a autonomia. O projeto
-                        também contribui para despertar o interesse pelas carreiras nas áreas de Ciência, Tecnologia,
-                        Engenharia e Matemática, preparando os jovens para os desafios do mundo digital e da
-                        indústria 4.0. Com essa abordagem prática e motivadora, o Projeto Robótica na Escola transforma
-                        a aprendizagem em uma experiência dinâmica, envolvente e alinhada com as demandas do século XXI.
-                    </p>
-                    <img src="img/ChatGPT Image 23 de abr. de 2025, 14_06_06.png" class="img-fluid w-100"
-                        alt="Imagem do projeto Clube de Ciências" srcset="">
+                    <p class="text-justify">O JEEP - Jovens Empreendedores Primeiros Passos é um programa educacional que
+ busca promover a cultura empreendedora entre jovens e adolescentes. Desenvolvido para ajudar os estudantes a aprenderem sobre 
+ o mundo dos negócios, o JEEP oferece uma abordagem prática e dinâmica, incentivando a criatividade, a inovação e o desenvolvimento
+  de habilidades essenciais para o empreendedorismo. 
+    Por meio de oficinas, palestras e atividades interativas, os participantes têm a oportunidade de explorar suas ideias, trabalhar em
+     equipe e desenvolver projetos que podem ser levados à prática. O programa aborda temas como planejamento empresarial, administração financeira,
+      marketing e liderança, preparando os jovens para enfrentarem os desafios do mercado. </p>
+                    <p class="text-justify">O JEEP também destaca a importância do pensamento crítico e da resolução de problemas,
+ capacitando os jovens a identificarem oportunidades e a criarem soluções inovadoras. Além disso, promove a conexão entre estudantes e empreendedores locais,
+  proporcionando um ambiente de troca de experiências e aprendizado prática.Com resultados positivos em diversas regiões, o JEEP tem se tornado uma ferramenta 
+  valiosa para inspirar a nova geração a se tornar mais autônoma e confiante em sua capacidade de transformar ideias em realidade, contribuindo para o
+   desenvolvimento econômico e social das comunidades em que estão inseridos.</p>
+                    <img src="img/unnamed.png" class="img-fluid w-100"
+                        alt="Imagem do projeto JEEP" srcset="">
                 </div>
             </div>
         </div>
@@ -189,8 +189,8 @@ onde ele nos ensinou a ter uma abilidade de fala, venda, e visão de futro.</p>
     <footer class="container py-5">
         <h2>Entre em contato!</h2>
         <i class="bi bi-envelope-at"></i>
-        <p>E-mail: flaviapedrao7@gmail.com</p>
-        <p class="my-5 text-center">© Copyright 2025. Produzido por Ana Flávia Pedrão.</p>
+        <p>E-mail: souza.oliveira.maria2508@escola.pr.gov.br</p>
+        <p class="my-5 text-center">© Copyright 2025. Produzido por Maria Clara de Souza Oliveira.</p>
     </footer>
 </body>
 
