--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 
 <body>
     <header class="container text-center">
-        <img src="img/a98ea2df4f7b79a2783d175814461cb8 (1).jpg" alt="Avatar da Maria Clara" class="rounded-circle" width="150" height="150"
-            srcset="">
+        <img src="img/a98ea2df4f7b79a2783d175814461cb8.jpg" alt="Avatar da Maria Clara" class="rounded-circle"
+            width="150" height="150" srcset="">
         <p class="lead">Olá, me chamo Maria Clara!</p>
         <h1>Sou estudante do Colégio Estadual 14 de Dezembro, na área de exatas!</h1>
-        <p>Sou estudante da área de exatas, quero me formar em Direito e Biomedicina, 
-        sou atualmente coordenadoraa da animação do JUCRAS, sonho em casat ter filhos, ter uma vida
-        financeira boa e desenvolver minha própria marca de cosméticos e perfumaria:</p>
+        <p>Sou estudante da área de exatas, quero me formar em Direito e Biomedicina,
+            sou atualmente coordenadoraa da animação do JUCRAS, sonho em casat ter filhos, ter uma vida
+            financeira boa e desenvolver minha própria marca de cosméticos e perfumaria:</p>
         <p class="lead">Minhas habilidades</p>
         <div>
             <p class="badge text-bg-secondary">Fazer unhas e dançar</p>
@@ -37,15 +37,20 @@
             <!-- Projeto 1 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="img/a98ea2df4f7b79a2783d175814461cb8.jpg" class="card-img-top"
+                    <img src="img/numerospares_impares1.webp" class="card-img-top"
                         alt="Imagem do projeto SOS Matemática">
                     <div class="card-body">
                         <h5 class="card-title">Projeto S.O.S Matemática</h5>
-                        <p class="card-text" style="text-align: justify;">O projeto S.O.S Matemática foi desenvolvido com os alunos do 1º ano do Ensino Médio,
- com o objetivo de fortalecer os conhecimentos em matemática básica de forma lúdica e colaborativa. A proposta central do projeto consistia em permitir que os 
- próprios estudantes escolhessem, em conjunto, os jogos matemáticos que seriam utilizados ao longo das aulas. Com a minha orientação, a turma participava
-ativamente da confecção ou adaptação desses jogos, alinhando-os aos conteúdos trabalhados em sala de aula. Para isso, eram utilizados materiais recicláveis
- como embalagens, garrafas PET e papelão, além de materiais escolares básicos como lápis, régua, cola e tesoura, incentivando a criatividade,
+                        <p class="card-text" style="text-align: justify;">O projeto S.O.S Matemática foi desenvolvido
+                            com os alunos do 1º ano do Ensino Médio,
+                            com o objetivo de fortalecer os conhecimentos em matemática básica de forma lúdica e
+                            colaborativa. A proposta central do projeto consistia em permitir que os
+                            próprios estudantes escolhessem, em conjunto, os jogos matemáticos que seriam utilizados ao
+                            longo das aulas. Com a minha orientação, a turma participava
+                            ativamente da confecção ou adaptação desses jogos, alinhando-os aos conteúdos trabalhados em
+                            sala de aula. Para isso, eram utilizados materiais recicláveis
+                            como embalagens, garrafas PET e papelão, além de materiais escolares básicos como lápis,
+                            régua, cola e tesoura, incentivando a criatividade,
                             .
                         </p>
                         <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal1">Veja
@@ -61,9 +66,11 @@ ativamente da confecção ou adaptação desses jogos, alinhando-os aos conteúd
                         alt="Projeto Clube de Ciências">
                     <div class="card-body">
                         <h5 class="card-title">Projeto Clube de Ciências</h5>
-                        <p class="card-text" style="text-align: justify;"> Eu e minha amiga Ana Paula, iremos participar de um projeto 
-chamado Conferência de Estolcomo, e esperamos ganhar o prêmio Nobel Junior, com o sustentabilidade tema água, onde desenvolveremos um projeto que ajudará a sociedade
-no futuro.
+                        <p class="card-text" style="text-align: justify;"> Eu e minha amiga Ana Paula, iremos participar
+                            de um projeto
+                            chamado Conferência de Estolcomo, e esperamos ganhar o prêmio Nobel Junior, com o
+                            sustentabilidade tema água, onde desenvolveremos um projeto que ajudará a sociedade
+                            no futuro.
                         </p>
                         <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal2">Veja
                             o
@@ -74,12 +81,12 @@ no futuro.
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="img/3d0c63c046d6bb0204b3a9e449b19fbf (1).jpg" class="card-img-top"
-                        alt="Projeto JEEP">
+                    <img src="img/unnamed (1).png" class="card-img-top" alt="Projeto JEEP">
                     <div class="card-body">
                         <h5 class="card-title">Projeto Robótica</h5>
-                        <p class="card-text" style="text-align: justify;">Foi um projeto que desenvolvemos no quinto ano do Ensino Fundamental
-onde ele nos ensinou a ter uma abilidade de fala, venda, e visão de futro.</p>
+                        <p class="card-text" style="text-align: justify;">Foi um projeto que desenvolvemos no quinto ano
+                            do Ensino Fundamental
+                            onde ele nos ensinou a ter uma abilidade de fala, venda, e visão de futro.</p>
                         <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal3">Veja
                             o
                             projeto</button>
@@ -121,7 +128,7 @@ onde ele nos ensinou a ter uma abilidade de fala, venda, e visão de futro.</p>
                         os alunos não apenas consolidam conhecimentos matemáticos, mas também desenvolvem autonomia,
                         cooperação e uma relação mais positiva com a disciplina.</p>
                     <p>Esse projeto foi desenvolvido no primeiro semestre de 2024.</p>
-                    <img src="img/ChatGPT Image 23 de abr. de 2025, 13_53_25.png" alt="Imagem do projeto SOS Matemática"
+                    <img src="img/numerospares_impares1.webp" alt="Imagem do projeto SOS Matemática"
                         class="img-fluid w-100" srcset="">
                 </div>
             </div>
@@ -143,15 +150,16 @@ onde ele nos ensinou a ter uma abilidade de fala, venda, e visão de futro.</p>
                         Física. Por meio de aulas experimentais, os estudantes são incentivados a explorar o
                         conhecimento científico de maneira ativa, investigativa e colaborativa. As atividades do clube
                         envolvem a realização de experimentos, montagem de maquetes, análise de fenômenos naturais e
-                        resolução de problemas do cotidiano, e um desses problemas, é a futura falta de água em nosso planeta, e é onde estamo em proceso 
-                    criação, mas será um processo que ajudará muito as pessoas do mundo todo</del>.</p>
+                        resolução de problemas do cotidiano, e um desses problemas, é a futura falta de água em nosso
+                        planeta, e é onde estamo em proceso
+                        criação, mas será um processo que ajudará muito as pessoas do mundo todo</del>.</p>
                     <p class="text-justify">Ao participar do projeto, os alunos desenvolvem habilidades como o
                         pensamento crítico, a
                         curiosidade científica e a capacidade de trabalhar em grupo, além de ampliarem sua compreensão
                         sobre os conceitos estudados em sala de aula. O Clube de Ciências também busca despertar o
                         interesse pela pesquisa e pela inovação, aproximando os estudantes do método científico e
                         promovendo uma vivência prática que torna o aprendizado mais envolvente e relevante.</p>
-                    <img src="img/ChatGPT Image 23 de abr. de 2025, 14_02_19.png" class="img-fluid w-100"
+                    <img src="img/dda4a71969af8402579eb6a45fa5f231.jpg" class="img-fluid w-100"
                         alt="Imagem do projeto Clube de Ciências" srcset="">
                 </div>
             </div>
@@ -167,20 +175,28 @@ onde ele nos ensinou a ter uma abilidade de fala, venda, e visão de futro.</p>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <p class="text-justify">O JEEP - Jovens Empreendedores Primeiros Passos é um programa educacional que
- busca promover a cultura empreendedora entre jovens e adolescentes. Desenvolvido para ajudar os estudantes a aprenderem sobre 
- o mundo dos negócios, o JEEP oferece uma abordagem prática e dinâmica, incentivando a criatividade, a inovação e o desenvolvimento
-  de habilidades essenciais para o empreendedorismo. 
-    Por meio de oficinas, palestras e atividades interativas, os participantes têm a oportunidade de explorar suas ideias, trabalhar em
-     equipe e desenvolver projetos que podem ser levados à prática. O programa aborda temas como planejamento empresarial, administração financeira,
-      marketing e liderança, preparando os jovens para enfrentarem os desafios do mercado. </p>
-                    <p class="text-justify">O JEEP também destaca a importância do pensamento crítico e da resolução de problemas,
- capacitando os jovens a identificarem oportunidades e a criarem soluções inovadoras. Além disso, promove a conexão entre estudantes e empreendedores locais,
-  proporcionando um ambiente de troca de experiências e aprendizado prática.Com resultados positivos em diversas regiões, o JEEP tem se tornado uma ferramenta 
-  valiosa para inspirar a nova geração a se tornar mais autônoma e confiante em sua capacidade de transformar ideias em realidade, contribuindo para o
-   desenvolvimento econômico e social das comunidades em que estão inseridos.</p>
-                    <img src="img/unnamed.png" class="img-fluid w-100"
-                        alt="Imagem do projeto JEEP" srcset="">
+                    <p class="text-justify">O JEEP - Jovens Empreendedores Primeiros Passos é um programa educacional
+                        que
+                        busca promover a cultura empreendedora entre jovens e adolescentes. Desenvolvido para ajudar os
+                        estudantes a aprenderem sobre
+                        o mundo dos negócios, o JEEP oferece uma abordagem prática e dinâmica, incentivando a
+                        criatividade, a inovação e o desenvolvimento
+                        de habilidades essenciais para o empreendedorismo.
+                        Por meio de oficinas, palestras e atividades interativas, os participantes têm a oportunidade de
+                        explorar suas ideias, trabalhar em
+                        equipe e desenvolver projetos que podem ser levados à prática. O programa aborda temas como
+                        planejamento empresarial, administração financeira,
+                        marketing e liderança, preparando os jovens para enfrentarem os desafios do mercado. </p>
+                    <p class="text-justify">O JEEP também destaca a importância do pensamento crítico e da resolução de
+                        problemas,
+                        capacitando os jovens a identificarem oportunidades e a criarem soluções inovadoras. Além disso,
+                        promove a conexão entre estudantes e empreendedores locais,
+                        proporcionando um ambiente de troca de experiências e aprendizado prática.Com resultados
+                        positivos em diversas regiões, o JEEP tem se tornado uma ferramenta
+                        valiosa para inspirar a nova geração a se tornar mais autônoma e confiante em sua capacidade de
+                        transformar ideias em realidade, contribuindo para o
+                        desenvolvimento econômico e social das comunidades em que estão inseridos.</p>
+                    <img src="img/unnamed (1).png" class="img-fluid w-100" alt="Imagem do projeto JEEP" srcset="">
                 </div>
             </div>
         </div>
