--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <div class="card">
                     <img src="img/unnamed (1).png" class="card-img-top" alt="Projeto JEEP">
                     <div class="card-body">
-                        <h5 class="card-title">Projeto Robótica</h5>
+                        <h5 class="card-title">Projeto JEEP</h5>
                         <p class="card-text" style="text-align: justify;">Foi um projeto que desenvolvemos no quinto ano
                             do Ensino Fundamental
                             onde ele nos ensinou a ter uma abilidade de fala, venda, e visão de futro.</p>
@@ -171,7 +171,7 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Projeto Robótica</h5>
+                    <h5 class="modal-title">Projeto JEEP</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
